fixed bug where backside asnt visible

--- a/src/App/components/Carousel/carousel.module.css
+++ b/src/App/components/Carousel/carousel.module.css
@@ -8,7 +8,7 @@
 	flex-basis: 50%;
 	height: 85vh;
 	transform-style: preserve-3d;
-	perspective: 100em;
+	perspective: 50em;
 }
 
 .card {
@@ -22,7 +22,6 @@
 	height: 100%;
 	padding-inline: 0.5em;
 	visibility: hidden;
-	backface-visibility: hidden;
 	transform-style: preserve-3d;
 }
 
@@ -33,6 +32,7 @@
 	inset: 0;
 	background-color: inherit;
 	transform: rotateX(180deg);
+	-webkit-backface-visibility: hidden;
 	backface-visibility: hidden;
 }
 
